k8s-advanced/kubernetes/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slack-metrics-api
  labels:
    app: slack-metrics-api
    component: api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: slack-metrics-api
    component: api
