k8s-advanced/kubernetes/base/api/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slack-metrics-api-netpol
spec:
  podSelector:
    matchLabels:
      app: slack-metrics-api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: kube-system
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - ports:
        - protocol: TCP
          port: 5432
    - ports:
        - protocol: TCP
          port: 443
